[package]
name = "rust-undergrad-thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
reqwest = { version = "0.12.24", features = ["blocking", "gzip", "brotli"] }
scraper = "0.24.0"
csv = "1.4.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"