[package]
name = "rust-undergrad-thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main" }
csv = "1.4.0"
regex = "1"
reqwest = { version = "0.12.24", features = ["cookies", "rustls-tls", "blocking", "gzip", "brotli"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.6", features = ["fs"] }
robotstxt-rs = "0.1.4"
anyhow = "1.0.100"
futures-util = "0.3.31"
